--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <footer>
+    <!-- <footer>
         <ul>
             <li><a href="">lingua</a></li>
             <li><a href="">lingua</a></li>
@@ -44,6 +44,6 @@
             <li><a href="">lingua</a></li>
             <li><a href="">lingua</a></li>
         </ul>
-    </footer>
+    </footer> -->
 </body>
 </html>
